Fix search behind slider

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -215,11 +215,6 @@
     border-color: var(--md-primary-bg-color);
 }
 
-.z-index-1000{
-  z-index: 1000;
-}
-
-
 .border-radius-10{
   border-radius: 10px !important;
 }
@@ -285,4 +280,8 @@ a.banner-link:hover {
 }
 .labels_zone{
   font-size:0.6rem;
+}
+
+.md-header {
+    z-index: 3;
 }
